Solution1/ConsoleApp1/obj/Debug/net6.0/c2022v2Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\modes\OneDrive\Stalinis kompiuteris\Compulerv2\CompilerC2022V2\Solution1\ConsoleApp1\Content\c2022v2.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ConsoleApp1.Content {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class c2022v2Parser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, PRINT=37, BIND=38, TYPE=39, 
		INTEGER=40, DOUBLE=41, CHAR=42, BOOL=43, NULL=44, IDENTIFIER=45, COMMENT=46, 
		WS=47;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_mathAssignment = 3, 
		RULE_assignment = 4, RULE_arrayAssignment = 5, RULE_unaryOperation = 6, 
		RULE_funCall = 7, RULE_bindCall = 8, RULE_printCall = 9, RULE_ifBlock = 10, 
		RULE_elseifBlock = 11, RULE_elseBlock = 12, RULE_forBlock = 13, RULE_whileBlock = 14, 
		RULE_block = 15, RULE_expression = 16, RULE_numericAss = 17, RULE_numericMultiOp = 18, 
		RULE_numericAddOp = 19, RULE_unaryOp = 20, RULE_booleanBinaryOp = 21, 
		RULE_comp = 22, RULE_constant = 23;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "mathAssignment", "assignment", "arrayAssignment", 
		"unaryOperation", "funCall", "bindCall", "printCall", "ifBlock", "elseifBlock", 
		"elseBlock", "forBlock", "whileBlock", "block", "expression", "numericAss", 
		"numericMultiOp", "numericAddOp", "unaryOp", "booleanBinaryOp", "comp", 
		"constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'='", "'['", "']'", "'('", "','", "')'", "'if'", "'ifend'", 
		"'elseif'", "'else'", "'for'", "'forend'", "'while'", "'whileend'", "'!'", 
		"'*='", "'/='", "'%='", "'+='", "'-='", "'*'", "'/'", "'%'", "'+'", "'-'", 
		"'++'", "'--'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'<='", 
		"'>='", "'print'", null, null, null, null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "PRINT", "BIND", "TYPE", "INTEGER", "DOUBLE", "CHAR", "BOOL", "NULL", 
		"IDENTIFIER", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "c2022v2.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public c2022v2Parser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(c2022v2Parser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__11) | (1L << T__13) | (1L << PRINT) | (1L << BIND) | (1L << TYPE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 48; line();
				}
				}
				State = 53;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 54; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public IfBlockContext ifBlock() {
			return GetRuleContext<IfBlockContext>(0);
		}
		public ForBlockContext forBlock() {
			return GetRuleContext<ForBlockContext>(0);
		}
		public WhileBlockContext whileBlock() {
			return GetRuleContext<WhileBlockContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 60;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case PRINT:
			case BIND:
			case TYPE:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56; statement();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57; ifBlock();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 3);
				{
				State = 58; forBlock();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 4);
				{
				State = 59; whileBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public MathAssignmentContext mathAssignment() {
			return GetRuleContext<MathAssignmentContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public ArrayAssignmentContext arrayAssignment() {
			return GetRuleContext<ArrayAssignmentContext>(0);
		}
		public FunCallContext funCall() {
			return GetRuleContext<FunCallContext>(0);
		}
		public PrintCallContext printCall() {
			return GetRuleContext<PrintCallContext>(0);
		}
		public BindCallContext bindCall() {
			return GetRuleContext<BindCallContext>(0);
		}
		public UnaryOperationContext unaryOperation() {
			return GetRuleContext<UnaryOperationContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 62; mathAssignment();
				}
				break;

			case 2:
				{
				State = 63; assignment();
				}
				break;

			case 3:
				{
				State = 64; arrayAssignment();
				}
				break;

			case 4:
				{
				State = 65; funCall();
				}
				break;

			case 5:
				{
				State = 66; printCall();
				}
				break;

			case 6:
				{
				State = 67; bindCall();
				}
				break;

			case 7:
				{
				State = 68; unaryOperation();
				}
				break;
			}
			State = 71; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MathAssignmentContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(c2022v2Parser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NumericAssContext numericAss() {
			return GetRuleContext<NumericAssContext>(0);
		}
		public MathAssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mathAssignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterMathAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitMathAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMathAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MathAssignmentContext mathAssignment() {
		MathAssignmentContext _localctx = new MathAssignmentContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_mathAssignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; Match(IDENTIFIER);
			{
			State = 74; numericAss();
			}
			State = 75; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(c2022v2Parser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode TYPE() { return GetToken(c2022v2Parser.TYPE, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_assignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==TYPE) {
				{
				State = 77; Match(TYPE);
				}
			}

			State = 80; Match(IDENTIFIER);
			State = 81; Match(T__1);
			State = 82; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayAssignmentContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(c2022v2Parser.TYPE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(c2022v2Parser.IDENTIFIER, 0); }
		public ITerminalNode INTEGER() { return GetToken(c2022v2Parser.INTEGER, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ArrayAssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayAssignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterArrayAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitArrayAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrayAssignmentContext arrayAssignment() {
		ArrayAssignmentContext _localctx = new ArrayAssignmentContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_arrayAssignment);
		try {
			State = 95;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case TYPE:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 84; Match(TYPE);
				State = 85; Match(IDENTIFIER);
				State = 86; Match(T__2);
				State = 87; Match(INTEGER);
				State = 88; Match(T__3);
				}
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 89; Match(IDENTIFIER);
				State = 90; Match(T__2);
				State = 91; Match(INTEGER);
				State = 92; Match(T__3);
				State = 93; Match(T__1);
				State = 94; expression(0);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryOperationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(c2022v2Parser.IDENTIFIER, 0); }
		public UnaryOpContext unaryOp() {
			return GetRuleContext<UnaryOpContext>(0);
		}
		public UnaryOperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryOperation; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterUnaryOperation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitUnaryOperation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnaryOperationContext unaryOperation() {
		UnaryOperationContext _localctx = new UnaryOperationContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_unaryOperation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(IDENTIFIER);
			State = 98; unaryOp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunCallContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(c2022v2Parser.TYPE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(c2022v2Parser.IDENTIFIER, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public FunCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterFunCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitFunCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunCallContext funCall() {
		FunCallContext _localctx = new FunCallContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_funCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(TYPE);
			State = 101; Match(IDENTIFIER);
			State = 102; Match(T__4);
			State = 111;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__15) | (1L << TYPE) | (1L << INTEGER) | (1L << DOUBLE) | (1L << CHAR) | (1L << BOOL) | (1L << NULL) | (1L << IDENTIFIER))) != 0)) {
				{
				State = 103; expression(0);
				State = 108;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__5) {
					{
					{
					State = 104; Match(T__5);
					State = 105; expression(0);
					}
					}
					State = 110;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 113; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BindCallContext : ParserRuleContext {
		public ITerminalNode BIND() { return GetToken(c2022v2Parser.BIND, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public BindCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bindCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterBindCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitBindCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBindCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BindCallContext bindCall() {
		BindCallContext _localctx = new BindCallContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_bindCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(BIND);
			State = 116; Match(T__4);
			State = 125;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__15) | (1L << TYPE) | (1L << INTEGER) | (1L << DOUBLE) | (1L << CHAR) | (1L << BOOL) | (1L << NULL) | (1L << IDENTIFIER))) != 0)) {
				{
				State = 117; expression(0);
				State = 122;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__5) {
					{
					{
					State = 118; Match(T__5);
					State = 119; expression(0);
					}
					}
					State = 124;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 127; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintCallContext : ParserRuleContext {
		public ITerminalNode PRINT() { return GetToken(c2022v2Parser.PRINT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PrintCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_printCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterPrintCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitPrintCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintCallContext printCall() {
		PrintCallContext _localctx = new PrintCallContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_printCall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129; Match(PRINT);
			State = 130; Match(T__4);
			State = 131; expression(0);
			State = 132; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfBlockContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseifBlockContext[] elseifBlock() {
			return GetRuleContexts<ElseifBlockContext>();
		}
		public ElseifBlockContext elseifBlock(int i) {
			return GetRuleContext<ElseifBlockContext>(i);
		}
		public ElseBlockContext elseBlock() {
			return GetRuleContext<ElseBlockContext>(0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterIfBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitIfBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfBlockContext ifBlock() {
		IfBlockContext _localctx = new IfBlockContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_ifBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; Match(T__7);
			State = 135; Match(T__4);
			State = 136; expression(0);
			State = 137; Match(T__6);
			State = 138; block();
			State = 142;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__9) {
				{
				{
				State = 139; elseifBlock();
				}
				}
				State = 144;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 146;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__10) {
				{
				State = 145; elseBlock();
				}
			}

			State = 148; Match(T__8);
			State = 149; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseifBlockContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseifBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseifBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.EnterElseifBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Ic2022v2Listener typedListener = listener as Ic2022v2Listener;
			if (typedListener != null) typedListener.ExitElseifBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ic2022v2Visitor<TResult> typedVisitor = visitor as Ic2022v2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseifBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
